# applications_app_samples

./: .gitattributes  .gitignore  CodeCommitChecklist.md  OAT.xml  README.md  README_zh.md  SampleReadTemplate.md  changelog.md  get_absolute_path.py  get_absolute_path.sh  local.properties  ohosTestTemplate.md  ohosTest_zh.md  serverdeployment.md
DFX/Debug/: README.md  (+1 more)
DirCloneTool/: CloneSpecifyDirForWindows.bat
ETSUI/XComponent/entry/src/main/cpp/: CMakeLists.txt  hello.cpp  plugin_manager.cpp  plugin_manager.h
ETSUI/XComponent/entry/src/main/cpp/render/: egl_core.cpp  egl_core.h  plugin_render.cpp  plugin_render.h
code/ArkTS1.2/ANISample/entry/src/main/cpp/: CMakeLists.txt  ani_accessing_fields.cpp  ani_array.cpp  ani_calling_methods.cpp  ani_init.cpp  ani_object.cpp  ani_references.cpp  ani_string.cpp  ani_vminterface.cpp
code/BasicFeature/Connectivity/VPN/entry/src/main/cpp/: CMakeLists.txt  vpn_client.cpp
code/BasicFeature/Connectivity/VPN/entry/src/main/cpp/types/libentry/: index.d.ts
code/BasicFeature/Media/AVSession/Sample/entry/src/main/cpp/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  hello.cpp  hello.h  session.cpp  session.h
code/BasicFeature/Media/AudioMusicPlayer/entry/src/main/cpp/: CMakeLists.txt  oh_audio_playing_ndk.cpp
code/BasicFeature/Media/AudioMusicPlayer/entry/src/main/cpp/player/: REFACTOR_PROGRESS.md  audio_buffer_queue.cpp  audio_buffer_queue.h  oh_audio_playing.cpp  oh_audio_playing.h
code/BasicFeature/Media/AudioMusicPlayer/entry/src/main/cpp/types/libentry/: Index.d.ts
code/BasicFeature/Media/AudioVoIPCall/entry/src/main/cpp/: CMakeLists.txt  NapiUtils.cpp  NapiUtils.h  audio.cpp
code/BasicFeature/Native/NdkNativeImage/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
code/BasicFeature/Native/NdkNativeImage/entry/src/main/cpp/common/: common.h
code/BasicFeature/Native/NdkNativeImage/entry/src/main/cpp/render/: image_render.cpp  image_render.h  native_render.cpp  native_render.h  render_engine.cpp  render_engine.h
code/DocsSample/ArkUISample-Sta/ImageCAPIGuild/entry/src/main/cpp/: CMakeLists.txt  ImageExample.cpp  ImageExample.h  NativeEntry.cpp  NativeEntry.h  ani_init.cpp  napi_init.cpp
code/DocsSample/ArkUISample-Sta/PickerCAPI/entry/src/main/cpp/: ArkUINodeAdapter.h  CMakeLists.txt  ContainerPickerCanLoopMaker.cpp  ContainerPickerCanLoopMaker.h  ContainerPickerEventsMaker.cpp  ContainerPickerEventsMaker.h  ContainerPickerIndexMaker.cpp  ContainerPickerIndexMaker.h  ContainerPickerIndicatorMaker.cpp  ContainerPickerIndicatorMaker.h  ContainerPickerMonthMaker.cpp  ContainerPickerMonthMaker.h  ContainerPickerRegionMaker.cpp  ContainerPickerRegionMaker.h  ContainerPickerTimeMaker.cpp  ContainerPickerTimeMaker.h  ContainerPickerTypesMaker.cpp  ContainerPickerTypesMaker.h  NativeEntry.h  ScrollableEvent.h  ScrollableNode.h  ScrollableUtils.cpp  ScrollableUtils.h  ani_init.cpp
code/DocsSample/ArkUISample/DisposeNodeCrash/entry/src/main/cpp/: BindCallback.cpp  BindCallback.h  CMakeLists.txt  napi_init.cpp
code/DocsSample/ArkUISample/NDKNavigation/entry/src/main/cpp/: CMakeLists.txt  EntryModule.cpp  EntryModule.h  QueryNavigation.h  napi_init.cpp
code/DocsSample/ArkUISample/NDKSwiperSample/entry/src/main/cpp/: CMakeLists.txt  NativeEntry.cpp  NativeEntry.h  napi_init.cpp
code/DocsSample/ArkUISample/NativeNodeSample/entry/src/main/cpp/: CMakeLists.txt  manager.cpp  manager.h  napi_init.cpp
code/DocsSample/ArkUISample/NativeType/native_type_sample/entry/src/main/cpp/: ArkUIBaseNode.h  ArkUIGridItemNode.h  ArkUIGridNode.h  ArkUINode.h  ArkUINodeAdapter.h  ArkUINodeExpandAdapter.h  ArkUIRowNode.h  CMakeLists.txt  ContainerPickerCanLoopMaker.cpp  ContainerPickerCanLoopMaker.h  ContainerPickerEventsMaker.cpp  ContainerPickerEventsMaker.h  ContainerPickerIndexMaker.cpp  ContainerPickerIndicatorMaker.cpp  ContainerPickerIndicatorMaker.h  ContainerPickerMaker.cpp  ContainerPickerMaker.h  ContainerPickerMonthMaker.cpp  ContainerPickerRegionMaker.cpp  ContainerPickerTimeMaker.cpp  ContainerPickerTypesMaker.cpp  GridDragEventMaker.cpp  GridDragEventMaker.h  GridLayoutOptions.h  GridMaker.cpp  GridMaker.h  HoverModeAreaTypeMaker.cpp  ListMaker.cpp  ListMaker.h  Matrix4.cpp  Matrix4.h  NodeManager.cpp  NodeManager.h  PublicEvent.cpp  RefreshMaker.cpp  RefreshMaker.h  ScrollMaker.cpp  ScrollMaker.h  ScrollableNode.h  WaterFlowMaker.cpp  (+6 more)
code/DocsSample/Media/Audio/AudioSnapshot/entry/src/main/cpp/: CMakeLists.txt  NapiUtils.cpp  NapiUtils.h  audio.cpp
code/DocsSample/Media/Audio/AudioSuiteSample/entry/src/main/cpp/: CMakeLists.txt  audioSuite.cpp  audio_converter_test.cpp  audio_converter_test.h  audio_format_converter.cpp  audio_format_converter.h  audio_suite.cpp  manualRendering.cpp  manualRendering.h  manual_rendering.cpp  manual_rendering.h  pcmFileUtils.cpp  pcmFileUtils.h  pcm_file_utils.cpp  pcm_file_utils.h  print_info_to_file.cpp  print_info_to_file.h  realTimeRendering.cpp  realTimeRendering.h  real_time_rendering.cpp  real_time_rendering.h  space_render_rotation.cpp  space_render_rotation.h
code/DocsSample/PerformanceAnalysisKit/HiAppEvent/EventSub/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
code/DocsSample/PerformanceAnalysisKit/HiAppEvent/EventSub_Sta/entry/src/main/cpp/: CMakeLists.txt  ani_init.cpp
code/SystemFeature/TV/TVInputSource/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
code/SystemFeature/TV/TVInputSource/entry/src/main/cpp/common/: common.h
code/SystemFeature/TV/TVInputSource/entry/src/main/cpp/manager/: plugin_manager.cpp  plugin_manager.h
code/SystemFeature/TV/TVInputSource/entry/src/main/cpp/render/: egl_core.cpp  egl_core.h  plugin_render.cpp  plugin_render.h
code/SystemFeature/TV/TVScreenRecorder/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
code/UI/NdkBuildOnMultiThread/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
code/UI/NdkBuildOnMultiThread/entry/src/main/cpp/common/: NativeModule.h
code/UI/NdkBuildOnMultiThread/entry/src/main/cpp/node/: NodeCreator.cpp  NodeCreator.h
code/UI/NdkBuildOnMultiThread/entry/src/main/cpp/types/libentry/: Index.d.ts
(+25852 files in other folders)
